--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PodcastChannel</title>
     <link type="text/css" rel="stylesheet" href="styles/styles.css">
-    <link type="text/css" rel="stylesheet" href="styles/tablestyles.css">
+    <link type="text/css" rel="stylesheet" href="styles/tabletstyles.css">
     <link type="text/css" rel="stylesheet" href="styles/desktopstyles.css">
     <link type="text/css" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300&family=IBM+Plex+Sans:wght@300&display=swap" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
