--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link type="text/css" rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 <body>
-    <div class="menu">
+    <header>
         <div class="head" > 
             <img src="images/logo.svg" class="logo logo1">
         </div>
@@ -24,7 +24,7 @@
             <div class="item" > <a class="a" href="#entrevistas">ENTREVISTAS</a></div>
             <div class="item" > <a class="a" href="#topicos">TÓPICOS</a> </div>
         </nav>
-    </div>
+    </header>
     <div class="cuerpo">
         <div class="begin">
             <h1>Hello <span>world</span> pale blue dot.</h1>
