Restructuring HTML, Change div .cuerpo for main and change location for div foot and  change name for News, on the other hand this element goes inside the main

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="item" > <a class="a" href="#topicos">TÓPICOS</a> </div>
         </nav>
     </header>
-    <div class="cuerpo">
+    <main>
         <div class="begin">
             <h1>Hello <span>world</span> pale blue dot.</h1>
             <p class="p1">Un podcast que explora el mundo de la programacion. Nuevos episodios, todos los jueves cada 15 dias</p>
@@ -102,13 +102,13 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="foot">
-        <div class="novedades">
-            <h2 class="nove">¿Quéres las ultimas novedades?</h2>
-            <a href="#episodios"><button>ESCUCHÁ LOS EPISODIOS</button></a>
+        <div class="news">
+            <div class="novedades">
+                <h2 class="nove">¿Quéres las ultimas novedades?</h2>
+                <a href="#episodios"><button>ESCUCHÁ LOS EPISODIOS</button></a>
+            </div>
         </div>
-    </div>
+    </main>
     <footer>
         <div class="copy">
             <p>© 2020-The world of podcasts</p>
