renaming classes and adding comments

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <input type="checkbox">
         <i class="fas fa-bars"></i>
         <i class="fas fa-times"></i>
-        <nav class="navega" id="navega">
-            <div class="item" > <a class="a" href="#episodios">EPISODIOS</a> </div>
-            <div class="item" > <a class="a" href="#nosotros">NOSOTROS</a> </div>
-            <div class="item" > <a class="a" href="#entrevistas">ENTREVISTAS</a></div>
-            <div class="item" > <a class="a" href="#topicos">TÓPICOS</a> </div>
+        <nav>
+            <div class="item" > <a class="a" href="#episodes">EPISODIOS</a> </div>
+            <div class="item" > <a class="a" href="#us">NOSOTROS</a> </div>
+            <div class="item" > <a class="a" href="#interviews">ENTREVISTAS</a></div>
+            <div class="item" > <a class="a" href="#topics">TÓPICOS</a> </div>
         </nav>
     </header>
     <main>
@@ -32,11 +32,11 @@
             <p class="p2">El portal de podcast que explora el mundo de la programacion y la tecnológia. Nuevos episodios, todos los jueves cada 15 dias. </p>
             <button>CONOCE MÁS</button>
         </div>
-        <div class="episodios" id="episodios">
+        <div class="episodes" id="episodes">
              
             <h2 class="h2">Episodios</h2>
            
-            <div class="epi">
+            <div class="episode">
                 <figure class="figure">
                     <iframe src="https://open.spotify.com/embed-podcast/show/2ySVrxGkN6n6frMTo9Nsrt" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                 </figure>
@@ -51,15 +51,15 @@
                 </figure>
             </div>
         </div>
-        <div class="nosotros" id="nosotros">
+        <div class="us" id="us">
             <div class="imgcell">
                 <figure class="phone">
                     <img src="images/phone.png" class="phonei">
                 </figure>
             </div>
-            <div class="nosot">
-                <h2 class="tit">De dónde venimos</h2>
-                <p class="nos">
+            <div class="wherefrom">
+                <h2 class="title">De dónde venimos</h2>
+                <p class="about">
                     Our posturings, our imagined self-importance, the delusion that we have some 
                     privileged position in the Universe, are challenged by this point of pale ligth.
                     <br>
@@ -70,19 +70,19 @@
                 </p>
             </div>
         </div>
-        <div class="entrevistas" id="entrevistas">
-            <h2 class="tit1">invitadas/os estelares</h2>
-            <div class="invitados">
-                <img src="images/1.png" class="inv">
-                <img src="images/2.png" class="inv">
-                <img src="images/3.png" class="inv">
-                <img src="images/4.png" class="inv">
-                <img src="images/5.png" class="inv">
-                <img src="images/6.png" class="inv">
+        <div class="interviews" id="interviews">
+            <h2 class="title1">invitadas/os estelares</h2>
+            <div class="guests">
+                <img src="images/1.png" class="guest">
+                <img src="images/2.png" class="guest">
+                <img src="images/3.png" class="guest">
+                <img src="images/4.png" class="guest">
+                <img src="images/5.png" class="guest">
+                <img src="images/6.png" class="guest">
             </div>
         </div>
-        <div class="topicos" id="topicos">
-            <h2 class="tit3">Algunos de nuestros temas</h2>
+        <div class="topicos" id="topics">
+            <h2 class="title3">Algunos de nuestros temas</h2>
             <div class="topics">
                 <div class="topic">
                     <img src="images/icon1.svg" class="tops">
@@ -103,9 +103,9 @@
             </div>
         </div>
         <div class="news">
-            <div class="novedades">
-                <h2 class="nove">¿Quéres las ultimas novedades?</h2>
-                <a href="#episodios"><button>ESCUCHÁ LOS EPISODIOS</button></a>
+            <div class="novelty">
+                <h2 class="new">¿Quéres las ultimas novedades?</h2>
+                <a href="#episodes"><button>ESCUCHÁ LOS EPISODIOS</button></a>
             </div>
         </div>
     </main>
@@ -113,12 +113,12 @@
         <div class="copy">
             <p>© 2020-The world of podcasts</p>
         </div>
-        <div class="rede">
-            <a class="aa" href="https://www.spotify.com/co/" target="_blank"><i class="fab fa-spotify"></i></a>
-            <a class="aa" href="https://www.instagram.com/?hl=es-la" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a class="aa" href="https://twitter.com/explore" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a class="aa" href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
-            <a class="aa" href="https://web.telegram.org" target="_blank"><i class="fab fa-telegram"></i></a>
+        <div class="social">
+            <a class="icons" href="https://www.spotify.com/co/" target="_blank"><i class="fab fa-spotify"></i></a>
+            <a class="icons" href="https://www.instagram.com/?hl=es-la" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a class="icons" href="https://twitter.com/explore" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a class="icons" href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a class="icons" href="https://web.telegram.org" target="_blank"><i class="fab fa-telegram"></i></a>
         </div>
     </footer>
 </body>
